# sbv2-api

./: Cargo.toml  test.py
crates/sbv2_core/: build.rs
crates/sbv2_core/src/: jtalk.rs
jpreprocess-fork/crates/jpreprocess-core/: Cargo.toml
jpreprocess-fork/crates/jpreprocess-core/src/: cform.rs
jpreprocess-fork/crates/jpreprocess-core/src/ctype/: mod.rs
jpreprocess-fork/crates/jpreprocess-core/src/pos/: mod.rs
scripts/: make_dict.sh
