[package]
name = "jpreprocess-core"
edition = "2021"
version = "0.13.2"
description = "Japanese text preprocessor for Text-to-Speech application (OpenJTalk rewrite in rust language)."
license = "BSD-3-Clause"
repository = "https://github.com/jpreprocess/jpreprocess"
keywords = ["tts", "openjtalk", "library"]
categories = ["text-processing"]
documentation = "https://docs.rs/jpreprocess-core"

[dependencies]
thiserror = "1.0.59"
bincode = "2.0.1"
once_cell = "1.19.0"
lindera = "~1.4.1"
serde = { version = "1.0.200", features = ["derive"] }
regex = "1.10.4"
aho-corasick = "1.1"
